--- a/src/style.css
+++ b/src/style.css
@@ -1,119 +1,133 @@
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+* {
+  list-style: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(135deg, #8a243c, #78458c);
 }
 
-.container {
-  width: 70%;
-  min-width: 450px;
+#task {
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+  width: 65%;
+  box-shadow: 0 2px 3px 3px rgba(158, 22, 22, 0.5);
+  border-radius: 8px;
   position: absolute;
-  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
-  padding: 30px 40px;
+  transform: translate(-50%, -50%);
 }
 
-#task {
-  position: relative;
-  background-color: #fff;
-  padding: 30px 20px;
-  border-radius: 5px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
-}
-
-#task input {
-  width: 80%;
-  height: 65px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 20px;
-  border: 2px solid #d1d3d4;
-  padding: 12px;
-  margin-top: 8px;
-  color: #111;
-  font-weight: 500;
-  position: relative;
-  border-radius: 5px;
-}
-
-#task input:focus {
-  outline: none;
-  border-color: #8052ec;
-}
-
-#task button {
-  position: relative;
-  float: right;
-  width: 2em;
-  height: 45px;
-  border-radius: 5px;
+h1 {
   margin-top: 20px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+}
+
+#title {
   font-size: 35px;
-  background-color: #8052ec;
+  font-family: 'Poppins', sans-serif;
+  color: #000;
+  background-color: rgb(41, 173, 68);
   border: none;
-  color: #fff;
-  cursor: pointer;
+  width: 90%;
+  height: 2em;
+  align-items: normal;
+  margin-left: 30px;
+}
+
+#title[type="text"]:focus {
   outline: none;
+}
+
+i {
+  cursor: pointer;
+  height: auto;
+}
+
+#add {
+  width: 12%;
+  height: 5em;
+  background-color: rgb(141, 76, 194);
+  color: whitesmoke;
+  margin-top: 0;
+  font-size: 2em;
+  font-family: 'Poppins', sans-serif;
+  position: relative;
+}
+
+#taskItem {
+  border: none;
+  font-style: normal;
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
+  width: 85%;
+  height: 3rem;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-indent: 10px;
 }
 
 #list {
-  background-color: #fff;
-  padding: 15px 12px;
-  margin-top: 1px;
-  border-radius: 5px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
-  width: 100%;
-  position: relative;
-  font-size: 1.5em;
-  font-family: 'Poppins', sans-serif;
-}
-
-#refresh {
-  float: right;
-  padding-right: 30px;
-  color: #6a7073;
-}
-
-hr {
-  margin-top: 0.5em;
-}
-
-.edit {
-  font-size: 18px;
-  float: inherit;
-  margin-left: 530px;
-}
-
-.delete {
-  font-size: 16px;
-  float: right;
-  margin-top: 5px;
-}
-
-#chkBox {
-  width: 1.6rem;
-  height: 1.6rem;
-  float: left;
-  margin-right: 20px;
-}
-
-#completed {
-  width: 100%;
-  position: relative;
-  font-family: 'Poppins', sans-serif;
-  height: 45px;
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+  padding: 0;
+  margin: 0;
   font-size: 20px;
-  background-color: rgb(195, 190, 190);
+  font-family: 'Poppins', sans-serif;
+}
+
+.listItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 3rem;
+  margin-left: 20px;
+  margin-right: 20px;
+  gap: 10px;
+  transition: 400ms ease-in-out;
+}
+
+.listItem:hover {
+  background-color: rgb(173, 227, 149);
+}
+
+.inputList {
   border: none;
-  border-radius: 5px;
-  margin-top: 1px;
+}
+
+.inputList[type="text"]:focus {
+  outline: none;
+}
+
+.taskDiv {
+  padding-right: 15rem;
+  width: 50%;
+  border: none;
+  outline: none;
+}
+
+.taskDiv .checkbox:checked {
+  text-decoration: line-through;
+}
+
+.dotsDiv {
+  padding-right: 1rem;
+  border: none;
+}
+
+#clsbtn {
+  width: 100%;
+  height: 2em;
+  font-size: 1.5em;
+  border: none;
+  cursor: pointer;
+  background: rgb(164, 5, 5);
+  color: yellow;
+}
+
+#clsbtn:hover {
+  background-color: rgb(183, 48, 54);
 }
